<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_illustration"
        android:layout_marginTop="@dimen/splash_logo_img_margin_top"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcom_title"
        android:textColor="@color/splashActivityTextColor"
        android:textSize="@dimen/splash_text_size"
        android:layout_marginTop="@dimen/splash_text_margin_top" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/splash_content"
        android:textSize="@dimen/splash_sub_text_size"
        android:layout_marginTop="@dimen/splash_sub_text_margin_top"
        android:textColor="@color/splashActivityTextColor"/>

    <Button
        android:id="@+id/bt_start"
        android:layout_width="@dimen/splash_bt_width"
        android:layout_height="@dimen/splash_bt_height"
        android:text="@string/start"
        android:textColor="@color/splashActivityBtColor"
        android:layout_marginTop="@dimen/splash_bt_margin_top"
        android:layout_gravity="center_horizontal"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        android:background="@drawable/bt_rectangle_backgroud"
        style="?android:attr/borderlessButtonStyle"/>


</LinearLayout>