<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/safeColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/notify_close_margin"
        android:layout_marginTop="@dimen/notify_close_margin"
        android:src="@drawable/icon_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/notify_title"
        android:textColor="@color/white1"
        android:textSize="@dimen/notify_title_size" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_notify_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/notify_content_margin_y"
            android:gravity="center"
            android:text="@string/notify_content"
            android:textColor="@color/safeColor"
            android:textSize="@dimen/notify_content_size" />

        <TextView
            android:id="@+id/tv_enable"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notify_button_height"
            android:layout_marginEnd="@dimen/notify_button_margin_x"
            android:layout_marginStart="@dimen/notify_button_margin_x"
            android:layout_marginTop="@dimen/notify_button_margin_y"
            android:background="@drawable/selector_radius_button"
            android:gravity="center"
            android:text="@string/enable"
            android:textColor="@color/white1"
            android:textSize="@dimen/notify_button_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/notify_ad_margin_y"
            android:text="@string/notify_ad"
            android:textColor="@color/gray1" />
    </LinearLayout>
</LinearLayout>