<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_main_title"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/settingItemTitleBarTextStyle"
            android:text="@string/app_name" />
        <ImageView
            android:id="@+id/iv_top_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scaleType="fitXY" />
        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainFragmentBtTextPinkColor"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitXY" />
    </LinearLayout>


    <LinearLayout
        app:layout_constraintBottom_toTopOf="@+id/fl_circle"
        android:paddingStart="@dimen/common_20dp"
        android:paddingEnd="@dimen/common_20dp"
        android:layout_marginBottom="@dimen/main_fragment_title_margin_bottom_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregnancy_probability"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_fragment_text_size"/>

        <TextView
            android:id="@+id/tv_sub_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregnancy_probability"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/main_fragment_text_size"
            android:layout_marginTop="@dimen/main_fragment_margin_top"/>
    </LinearLayout>


    <!--圆环及圆环内的内容-->
    <FrameLayout
        android:id="@+id/fl_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42">

        <ImageView
            android:id="@+id/iv_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_bg" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/rl_circle_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_circle_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/period_in"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_fragment_text_margin_top"
                android:textColor="@color/mainFragmentCircleTitleTextColor"
                android:textSize="@dimen/main_fragment_circle_main_text_size"
                app:layout_constraintBottom_toTopOf="@+id/tv_circle_main_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <TextView
                android:id="@+id/tv_circle_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainFragmentCircleDateTextColor"
                android:gravity="center"
                tools:text="@string/format_days"
                android:textSize="@dimen/main_fragment_circle_sub_text_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_circle_sub_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <TextView
                android:id="@+id/tv_circle_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/main_fragment_text_margin_top"
                android:textColor="@color/mainFragmentCircleForecastTextColor"
                android:textSize="@dimen/main_fragment_circle_forecast_text_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_circle_main_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="@string/forecast"/>

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>


    <!--按钮及按钮的提示文字-->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            tools:text="@string/friday_october"
            android:textColor="@color/mainFragmentDateTextColor"
            android:textSize="@dimen/main_fragment_date_text_size"/>

        <Button
            android:stateListAnimator="@null"
            android:id="@+id/bt_operation"
            android:layout_width="@dimen/main_fragment_bt_width"
            android:layout_height="@dimen/main_fragment_bt_height"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/main_fragment_bt_margin_bottom"
            android:layout_marginTop="@dimen/main_fragment_bt_margin_btop"
            android:background="@drawable/bt_main_fragment_green_backgroud"
            android:text="@string/dialog_calendar_title"
            android:textSize="@dimen/common_17dp"
            android:textAllCaps="false"
            android:textColor="@color/white1"/>

        <TextView
            android:id="@+id/tv_operation"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_fragment_bt_height"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/main_fragment_bt_margin_bottom"
            android:layout_marginTop="@dimen/main_fragment_bt_margin_btop"
            android:text="@string/operation_tips"
            android:textAllCaps="false"
            android:textColor="@color/mainFragmentTvColor"
            android:textSize="@dimen/common_17dp"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>